--- a/packages/ui/sass/components/labels.scss
+++ b/packages/ui/sass/components/labels.scss
@@ -7,7 +7,8 @@
   color: $medium-gray;
   text-align: left;
   text-transform: uppercase;
-  line-height: 41px;
+  line-height: 1.2;
+  padding: 10px 10px 10px 0;
 }
 
 .image-label {
